# nanobyte

./: pyproject.toml
knowledge/: comparison_mamba1_vs_mamba2.md  summary_gated_deltanet.md  summary_mamba2_ssd.md  summary_mambabyte.md
nanochat/: common.py  flash_attention.py  mamba1.py  mamba2.py  triton_scan.py
scripts/: base_train.py  chat_sft.py  mamba2_train.py  mamba_train.py
tests/: test_attention_fallback.py  test_mamba2.py
